--- a/chat.htm
+++ b/chat.htm
@@ -16,15 +16,15 @@
 		
 		<section id="animaux">
 			<h3>Stain</h3>
-			<a href="chatsatin.htm"><img src="chats/satin.jpg" class="animal" alt="satin"/></a>
+			<a href="chats/chatsatin.htm"><img src="img/satin.jpg" class="animal" alt="satin"/></a>
 			<br>
 			
 			<h3>Tigre</h3>
-			<a href="chattigre.htm"><img src="chats/tigre.jpg" class="animal" alt="tigre"/></a>
+			<a href="chats/chattigre.htm"><img src="img/tigre.jpg" class="animal" alt="tigre"/></a>
 			<br>
 			
 			<h3>Sleepy</h3>
-			<a href="chatsleepy.htm"><img src="chats/sleepy.jpg" class="animal" alt="sleepy"/></a>
+			<a href="chats/chatsleepy.htm"><img src="img/sleepy.jpg" class="animal" alt="sleepy"/></a>
 			<br>
 		</section>
 		
