--- a/chats/chatsatin.htm
+++ b/chats/chatsatin.htm
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="fr">
+	<!-- Validé -->
     <head>
-		<!-- Validé -->
-        <title>Moon</title>
+        <title>Satin</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
+        <link rel="stylesheet" type="text/css" href="css/bgcolor.css"/>
     </head>
     <body>
 		<h1 id="titre">Animals</h1>
@@ -21,32 +23,28 @@
             </div> -->
 			
 			<div>
-				<h3>Belle</h3>
+				<h3>Satin</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chiens/2.jpg" class="chat" alt="moon"/></td>
+						<td colspan="2"><img src="img/satin.jpg" class="chat" alt="satin"/></td>
 						<td>
-							<p>
-							Moon est le chien parfait si vous avez des enfants. Il adore jouer avec eux et s'occuper d'eux.
-							</p>
+							<p>Depuis très lontemps les chats noir ont était associés avec des idées négatives. mais on est là pour vous assurez q'un chat noir n'est qu'une petite boule d'amour :)<p>
 							<br>
-							<p>
-							De plus il est très calme et tranquille. Moon adore les chat alors si vous en avez il ne faut pas s'inquiéter.
-							</p>
+							<p>Vous serez très ravis de rencontrer Satin qui est un de nos chats les plus câlineux !</p>
 							<br>
 						</td>
 					</tr>
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Chien, Labrador Retriever</li>
-								<li>Age: 4 ans</li>
-								<li>Sexe: Male</li>
-								<li>Taille: grand</li>
+								<li>Race : Chat, européen</li>
+								<li>Age: 2 ans</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: Moyenne</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chiens/moon2.jpg" class="chat" alt="moon2"/>
+							<img src="img/satin2.jpg" class="chat" alt="satin2"/>
 						</td>
 					</tr>
 					<tr>
@@ -88,9 +86,7 @@
             <p>&copy; 2018 Inside Corporation</p>
 			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
         </footer>
-		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
-		
+				
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
