--- a/chien.htm
+++ b/chien.htm
@@ -15,13 +15,13 @@
 		
 		<section id="animaux">
 			<h3>Belle</h3>
-			<a href="chien1.htm"><img src="chiens/1.jpg" class="animal" alt="1"/></a>
+			<a href="chiens/chien1.htm"><img src="img/chien1.jpg" class="animal" alt="1"/></a>
 			
 			<h3>Moon</h3>
-			<a href="chien2.htm"><img src="chiens/2.jpg" class="animal" alt="2"/></a>
+			<a href="chiens/chien2.htm"><img src="img/chien2.jpg" class="animal" alt="2"/></a>
 			
 			<h3>Suki</h3>
-			<a href="chien3.htm"><img src="chiens/3.jpg" class="animal" alt="3"/></a>
+			<a href="chiens/chien3.htm"><img src="img/chien3.jpg" class="animal" alt="3"/></a>
 		</section>
 		
 		<footer>
