--- a/chiens/chien1.htm
+++ b/chiens/chien1.htm
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="fr">
     <head>
-		<!-- valide-->
-        <title>Kiwi</title>
+		<!-- Validé -->
+        <title>Belle</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
@@ -18,20 +19,20 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
                 </p>
-            </div> -->
+            </div>-->
 			
 			<div>
-				<h3>Kiwi</h3>
+				<h3>Belle</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="exotique/herisson.jpg" class="chat" alt="herisson"/></td>
+						<td colspan="2"><img src="img/chien1.jpg" class="chat" alt="belle"/></td>
 						<td>
 							<p>
-							Kiwi adore faire du sport sur sa roue, il peut rester toute la nuit a courire de dans.
+							Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très havitué aux gens.
 							</p>
 							<br>
 							<p>
-							Les hérissons sont des animaux nocturnes et insecticides, pour l'adopter il faut avoir suffisament de connaissance sur les hérissons.
+							Elle est pleine de vie et adore jouer. Elle est courageuse autour des autres chiens également alors si vous avez déjà un chien, vous pouvez adopter Belle quand même !
 							</p>
 							<br>
 						</td>
@@ -39,14 +40,14 @@
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Hérisson, domestique</li>
-								<li>Age: 1 an</li>
-								<li>Sexe: Male</li>
-								<li>Taille: 20-30 cm</li>
+								<li>Race : Chien, Spitz-loup (ou Keeshond, Allemand)</li>
+								<li>Age: 5 semaines</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: grand</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="exotique/herisson2.jpg" class="chat" alt="herisson2"/>
+							<img src="img/belle2.jpg" class="chat" alt="belle2"/>
 						</td>
 					</tr>
 					<tr>
@@ -88,7 +89,9 @@
             <p>&copy; 2018 Inside Corporation</p>
 			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
         </footer>
-				
+		
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
+		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
