--- a/chiens/chien2.htm
+++ b/chiens/chien2.htm
@@ -2,8 +2,9 @@
 <html lang="fr">
     <head>
 		<!-- Validé -->
-        <title>Belle</title>
+        <title>Moon</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
@@ -18,20 +19,20 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
                 </p>
-            </div>-->
+            </div> -->
 			
 			<div>
 				<h3>Belle</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chiens/1.jpg" class="chat" alt="belle"/></td>
+						<td colspan="2"><img src="img/chien2.jpg" class="chat" alt="moon"/></td>
 						<td>
 							<p>
-							Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très havitué aux gens.
+							Moon est le chien parfait si vous avez des enfants. Il adore jouer avec eux et s'occuper d'eux.
 							</p>
 							<br>
 							<p>
-							Elle est pleine de vie et adore jouer. Elle est courageuse autour des autres chiens également alors si vous avez déjà un chien, vous pouvez adopter Belle quand même !
+							De plus il est très calme et tranquille. Moon adore les chat alors si vous en avez il ne faut pas s'inquiéter.
 							</p>
 							<br>
 						</td>
@@ -39,14 +40,14 @@
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Chien, Spitz-loup (ou Keeshond, Allemand)</li>
-								<li>Age: 5 semaines</li>
-								<li>Sexe: Femelle</li>
+								<li>Race : Chien, Labrador Retriever</li>
+								<li>Age: 4 ans</li>
+								<li>Sexe: Male</li>
 								<li>Taille: grand</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chiens/belle2.jpg" class="chat" alt="belle2"/>
+							<img src="img/moon2.jpg" class="chat" alt="moon2"/>
 						</td>
 					</tr>
 					<tr>
