--- a/exotique.htm
+++ b/exotique.htm
@@ -15,23 +15,23 @@
 		
 		<section id="animaux">
 			<h3>Zozor</h3>
-			<a href="cheval.htm"><img src="exotique/cheval.jpg" class="animal" alt="cheval"/></a>
+			<a href="exotiques/cheval.htm"><img src="img/cheval.jpg" class="animal" alt="cheval"/></a>
 			<br>
 			
 			<h3>Python</h3>
-			<a href="snake.htm"><img src="exotique/snake.jpg" class="animal" alt="snake"/></a>
+			<a href="exotiques/snake.htm"><img src="img/snake.jpg" class="animal" alt="snake"/></a>
 			<br>
 			
 			<h3>Kiwi</h3>
-			<a href="herisson.htm"><img src="exotique/herisson.jpg" class="animal" alt="herisson"/></a>
+			<a href="exotiques/herisson.htm"><img src="img/herisson.jpg" class="animal" alt="herisson"/></a>
 			<br>
 			
 			<h3>Coco</h3>
-			<a href="croco.htm"><img src="exotique/croco.jpg" class="animal" alt="croco"/></a>
+			<a href="exotiques/croco.htm"><img src="img/croco.jpg" class="animal" alt="croco"/></a>
 			<br>
 			
 			<h3>Mimi</h3>
-			<a href="tarantule.htm"><img src="exotique/tarantula.jpg" class="animal" alt="tarentule"/></a>
+			<a href="exotiques/tarantule.htm"><img src="img/tarantula.jpg" class="animal" alt="tarentule"/></a>
 			<br>
 		</section>
 		
