--- a/exotiques/cheval.htm
+++ b/exotiques/cheval.htm
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="fr">
     <head>
-        <title>Sleepy</title>
+		<!-- validé -->
+        <title>Zozor</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
@@ -20,27 +22,32 @@
             </div> -->
 			
 			<div>
-				<h3>Sleepy le chaton</h3>
-				<table id="tab1">
+				<h3>Croco</h3>
+				<table>
 					<tr>
-						<td colspan="2"><img src="chats/sleepy.jpg" class="chat" alt="sleepy"/></td>
+						<td colspan="2"><img src="img/cheval.jpg" class="chat" alt="cheval"/></td>
 						<td>
-							<p>Sleepy est un chaton de 3 mois. c'est une boule d'énergie mais il apprécie beaucoup ces siestes :3</p>
+							<p>
+							On a sauvé Zozor d'un cirque où il a était mal traité mais aujourd'hui il est très heureux et energetique !
+							</p>
 							<br>
-							<p>Sleepy grandira avec votre famille, et il est très décontracté autour des autres animaux.</p>
+							<p>
+							Zozor adore tout les animaux :)
+							</p>
 							<br>
 						</td>
 					</tr>
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Chat, européen</li>
-								<li>Age: 3 mois</li>
-								<li>Sexe: Male</li>
+								<li>Race : Cheval, Barbe</li>
+								<li>Age: 5 ans</li>
+								<li>Sexe: Femelle</li>
+								<li>Taille: Moyenne</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chats/sleepy3.jpg" class="chat" alt="sleepy2"/>
+							<img src="img/cheval2.jpg" class="chat" alt="cheval2"/>
 						</td>
 					</tr>
 					<tr>
