--- a/exotiques/herisson.htm
+++ b/exotiques/herisson.htm
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="fr">
     <head>
-		<!-- valide -->
-        <title>Mimi</title>
+		<!-- valide-->
+        <title>Kiwi</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
@@ -21,17 +22,17 @@
             </div> -->
 			
 			<div>
-				<h3>Mimi</h3>
+				<h3>Kiwi</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="exotique/tarantula.jpg" class="chat" alt="tarentule"/></td>
+						<td colspan="2"><img src="img/herisson.jpg" class="chat" alt="herisson"/></td>
 						<td>
 							<p>
-							Mimi est une tarentle de taille moyenne, elleest calme et aime bien être manipulée de temps en temps.
+							Kiwi adore faire du sport sur sa roue, il peut rester toute la nuit a courire de dans.
 							</p>
 							<br>
 							<p>
-							Il est très facil de s'occuper d'une tarentule, et son terrarium peut être très jolie et décoratif.
+							Les hérissons sont des animaux nocturnes et insecticides, pour l'adopter il faut avoir suffisament de connaissance sur les hérissons.
 							</p>
 							<br>
 						</td>
@@ -39,14 +40,14 @@
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Tarantule rose mexicaine</li>
-								<li>Age: 8 mois</li>
-								<li>Sexe: Femelle</li>
-								<li>Taille: 10-15 cm</li>
+								<li>Race : Hérisson, domestique</li>
+								<li>Age: 1 an</li>
+								<li>Sexe: Male</li>
+								<li>Taille: 20-30 cm</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="exotique/tarantula2.jpg" class="chat" alt="tarentule2"/>
+							<img src="img/herisson2.jpg" class="chat" alt="herisson2"/>
 						</td>
 					</tr>
 					<tr>
