--- a/exotiques/snake.htm
+++ b/exotiques/snake.htm
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="fr">
     <head>
-		<!-- Validé -->
-        <title>Tigre</title>
+		<!-- valide -->
+        <title>Python</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
-        <link rel="stylesheet" type="text/css" href="css/bgcolor.css"/>
     </head>
     <body>
 		<h1 id="titre">Animals</h1>
@@ -22,28 +22,32 @@
             </div> -->
 			
 			<div>
-				<h3>Tigre</h3>
+				<h3>Python</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chats/tigre2.jpg" class="chat" alt="tigre"/></td>
+						<td colspan="2"><img src="img/snake.jpg" class="chat" alt="snake"/></td>
 						<td>
-							<p>Tigre est un chat très sportif et adore les enfants. En plus il est très facile de jouer avec lui.</p>
+							<p>
+							Python est un serpent très spécial qui vient du brésil. Son trait le plus remarquable est sa peau iridescente ! et c'est beaucoup plus impressionnant dans la vrai vie.
+							</p>
 							<br>
-							<p>Tigre est le chat qui va changer votre point de vu sur les chats ^^</p>
+							<p>
+							Le petit Python adore manger et il grandit très vite, et il est pas aussi timide que les autres serpents :3
+							</p>
 							<br>
 						</td>
 					</tr>
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Chat, Maine Coon</li>
-								<li>Age: 3 ans</li>
+								<li>Race : Serpent, Epicrates cenchria (ou Rainbox Boa)</li>
+								<li>Age: 6 mois</li>
 								<li>Sexe: Femelle</li>
-								<li>Taille: grand</li>
+								<li>Taille: 2 mètres</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chats/tigre.jpg" class="chat" alt="tigre"/>
+							<img src="img/snake2.jpg" class="chat" alt="snake2"/>
 						</td>
 					</tr>
 					<tr>
@@ -85,7 +89,9 @@
             <p>&copy; 2018 Inside Corporation</p>
 			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
         </footer>
-				
+		
+		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
+		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
