--- a/exotiques/tarantule.htm
+++ b/exotiques/tarantule.htm
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="fr">
     <head>
-		<!-- validé -->
-        <title>Zozor</title>
+		<!-- valide -->
+        <title>Mimi</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
@@ -21,17 +22,17 @@
             </div> -->
 			
 			<div>
-				<h3>Croco</h3>
+				<h3>Mimi</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="exotique/cheval.jpg" class="chat" alt="cheval"/></td>
+						<td colspan="2"><img src="img/tarantula.jpg" class="chat" alt="tarentule"/></td>
 						<td>
 							<p>
-							On a sauvé Zozor d'un cirque où il a était mal traité mais aujourd'hui il est très heureux et energetique !
+							Mimi est une tarentle de taille moyenne, elleest calme et aime bien être manipulée de temps en temps.
 							</p>
 							<br>
 							<p>
-							Zozor adore tout les animaux :)
+							Il est très facil de s'occuper d'une tarentule, et son terrarium peut être très jolie et décoratif.
 							</p>
 							<br>
 						</td>
@@ -39,14 +40,14 @@
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Cheval, Barbe</li>
-								<li>Age: 5 ans</li>
+								<li>Race : Tarantule rose mexicaine</li>
+								<li>Age: 8 mois</li>
 								<li>Sexe: Femelle</li>
-								<li>Taille: Moyenne</li>
+								<li>Taille: 10-15 cm</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="exotique/cheval2.jpg" class="chat" alt="cheval2"/>
+							<img src="img/tarantula2.jpg" class="chat" alt="tarentule2"/>
 						</td>
 					</tr>
 					<tr>
