--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 					<h2> Vous voulez adopter un animal de compagnie?</h2>
 					<p>
 						Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions aux quels vous devez adhérer pour pouvoir le faire...
-					</p>
+					</	p>
 					<p class="bouton"><a href="adopter.htm">Continuer</a></p>
 				</article>
 				
@@ -34,7 +34,7 @@
 					<p>
 						<img src="chats/sleepy.jpg" alt="sleepy" /> Sleepy viens d'arriver chez nous il y a une semaine, et il a déjà beacoup de fans...
 					</p>
-					<p class="bouton"><a href="chatsleepy.htm">Continuer</a></p>
+					<p class="bouton"><a href="chats/chatsleepy.htm">Continuer</a></p>
 				</article>
 				
 				<article>
