--- a/nos-animaux.htm
+++ b/nos-animaux.htm
@@ -17,13 +17,13 @@
 		
 		<section id="animaux">
 			<h3>Nos chats</h3>
-			<a href="chat.htm"><img src="chats/tigre.jpg" class="animal" alt="tigre"/></a>
+			<a href="chat.htm"><img src="img/tigre.jpg" class="animal" alt="chat"/></a>
 			
 			<h3>Nos chiens</h3>
-			<a href="chien.htm"><img src="chiens/1.jpg" class="animal" alt="1"/></a>
+			<a href="chien.htm"><img src="img/chien1.jpg" class="animal" alt="chien"/></a>
 			
 			<h3>Nos animaux exotiques</h3>
-			<a href="exotique.htm"><img src="exotique/snake.jpg" class="animal" alt="exo"/></a>
+			<a href="exotique.htm"><img src="img/snake.jpg" class="animal" alt="serpent"/></a>
 		</section>
 		
 		<footer>
