--- a/exotiques/croco.htm
+++ b/exotiques/croco.htm
@@ -2,8 +2,9 @@
 <html lang="fr">
     <head>
 		<!-- Validé -->
-        <title>Suki</title>
+        <title>Croco</title>
         <meta charset="utf-8">
+		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
 		<link rel="stylesheet" type="text/css" href="css/pages-individuelles.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
@@ -21,17 +22,17 @@
             </div> -->
 			
 			<div>
-				<h3>Suki</h3>
+				<h3>Croco</h3>
 				<table>
 					<tr>
-						<td colspan="2"><img src="chiens/3.jpg" class="chat" alt="suki"/></td>
+						<td colspan="2"><img src="img/croco.jpg" class="chat" alt="croco"/></td>
 						<td>
 							<p>
-							Suki est un chien avec beaucoup de personnalité, il va vous surprendre tout les jours :)
+							Croco est un animal très exotique et donc vous devez adhérer à plusieurs conditions pour l'adopter.
 							</p>
 							<br>
 							<p>
-							Suki est un chien très sportif, qui adore courir et jouer, C'est le chien parfait pour les athlètes et les personnes sportifs.
+							Croco est très adorable et surtout parce qu'il est encore jeune ;)
 							</p>
 							<br>
 						</td>
@@ -39,14 +40,14 @@
 					<tr>
 						<td class="caracteres">
 							<ul>
-								<li>Race : Chien, Berger Australien</li>
-								<li>Age: 1 ans</li>
+								<li>Race : Crocodile, Caïmman</li>
+								<li>Age: 2 semaines</li>
 								<li>Sexe: Femelle</li>
-								<li>Taille: grand</li>
+								<li>Taille: Très grand</li>
 							</ul>
 						</td>
 						<td colspan="2">
-							<img src="chiens/suki2.jpg" class="chat" alt="suki2"/>
+							<img src="img/croco2.jpg" class="chat" alt="croco2"/>
 						</td>
 					</tr>
 					<tr>
@@ -88,9 +89,7 @@
             <p>&copy; 2018 Inside Corporation</p>
 			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
         </footer>
-		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
-		
+				
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
