j'ai oublié les actus, j'ai laissé adopter.htm à la racine

--- a/index.htm
+++ b/index.htm
@@ -26,13 +26,13 @@
 					<p>
 						On a recuillit toutes les informations et les recommendations d'après les psycologues d'animaux les plus renommés...
 					</p>
-					<p class="bouton"><a href="chat-heureux.htm">Continuer</a></p>
+					<p class="bouton"><a href="news/chat-heureux.htm">Continuer</a></p>
 				</article>
 				
 				<article>
 					<h2> Sleepy le chaton</h2>
 					<p>
-						<img src="chats/sleepy.jpg" alt="sleepy" /> Sleepy viens d'arriver chez nous il y a une semaine, et il a déjà beacoup de fans...
+						<img src="img/sleepy.jpg" alt="sleepy" /> Sleepy viens d'arriver chez nous il y a une semaine, et il a déjà beacoup de fans...
 					</p>
 					<p class="bouton"><a href="chats/chatsleepy.htm">Continuer</a></p>
 				</article>
@@ -42,7 +42,7 @@
 					<p>
 						L'hérisson comme animal de compagnie peut paraître étrange mais de plus en plus de gens décident d'adopter cette superbe animal. Voici comment s'en occuper...
 					</p>
-					<p class="bouton"><a href="soccuper-herisson.htm">Continuer</a></p>
+					<p class="bouton"><a href="news/soccuper-herisson.htm">Continuer</a></p>
 				</article>
 				
 				<article>
@@ -50,7 +50,7 @@
 					<p>
 						Beaucoup de personnes sont intéressés par les reptiles et plus spécifiquement les serpent comme animal de compagie, mais est-ce que ça peut être l'animal parfait pour vous?...
 					</p>
-					<p class="bouton"><a href="adopter-serpent.htm">Continuer</a></p>
+					<p class="bouton"><a href="news/adopter-serpent.htm">Continuer</a></p>
 				</article>
 		</section>
 		
