ortographe + clean (il reste à faire chien3 + animaux exotiques)

--- a/adopter.htm
+++ b/adopter.htm
@@ -3,88 +3,56 @@
 <html lang="fr">
 	<!-- ce document est validé -->
     <head>
-        <title>index</title>
+        <title>Adopter un animal</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
-		<h1 id="titre">Animals</h1>
-		<nav id="menu"></nav>
-
-        <div id="contenu">
-            <!-- <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-            </div> -->
+	
+		<header>
+			<h1>URC'Adopter</h1>
+			<nav></nav>
+		</header>
 		
-            <div>
-					<h2> Vous voulez adopter un animal de compagnie?</h2>
-					<p>
-					Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions aux quels vous devez adhérer pour pouvoir le faire.
-					</p>
-					<br>
-					<p>Bien sur ces conditions vont être différent selon l'animal que vous souhaitez</p>
-					<br>
-					<p>Les conditions qui suivent s'appliquent généralement aux chats et cheins, pour des informations suplémentaires, ou des informations sur un autre animal contactez nous.
-					</p>
-					<br>
-					<h4>Pour un chat :</h4>
-					<p>
-					Il est possible d'avoir un chat heureux même dans un appartement, le plus important c'est de lui laisser un espace suffisant et de lui fournir un "territoire". Les chat sont des animaux très territoriaux et donc lui fournir un arbre a chat est très recommendé. Il est également très important de lui fournir des jouet, il faut penser à lui donner de quoi se dépenser et de quoi être stimulé.
-					</p>
-					<p>Un autre point très important c'est de lui fournir de la nourriture de bonne qualités et qui rempli tout ces besoins nutritionnels quotidiens. Un caht en bonne santé est un chat heureux.
-					</p>
-					<br>
-					<h4>Pour un chien</h4>
-					<p>
-					Tout comme un chat, une nutrition complète est très importante.
-					</p>
-					<p>
-					Les chien sont très sociaux et ils adorent jouer. Il est très important de les sortir 2 fois par jour pour leurs besoins mais aussi pour qu'ils dépensent leur énergie et qu'ils fassent du sport.
-					</p>
-					<br>
-					<h4> Formalités d'adoption :</h4>
-					<ul>
-						<li>Une pièce d'identité</li>
-						<li>Un justificatif de domicile</li>
-						<li>Prévoir une caisse de transport pour un char et un collier et une laisse pour un chien</li>
-					</ul>
-					<br>
-					<h4>Une participation financière sera demandée :</h4>
-					<ul>
-						<li>Différente selon le type et l'âge de l'animal, entre 60 et 500€</li>
-					</ul>
-			</div>
-		
-           <!--
-            <div id="actus">
-                <ul>
-                    <li>Brand new song for everybody</li>
-                    <li>Cheese for every one ?!</li>
-                    <li>Les jeux tuent plus que le cancer du poumon</li>
-                    <li>ioqjoiqjiojqoijoiqj qdvfdsvfs</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>cracracra dojksofjvfovbjz fiejv o</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                </ul>
-            </div> -->
-        </div>
+        <section class="main">
+				<h2> Vous voulez adopter un animal de compagnie?</h2>
+				<p>
+				Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions aux quels vous devez adhérer pour pouvoir le faire.
+				</p>
+				<br>
+				<p>Bien sûr ces conditions vont être différentes selon l'animal que vous souhaitez</p>
+				<br>
+				<p>Les conditions qui suivent s'appliquent généralement aux chats et chiens, pour des informations suplémentaires, ou des informations sur un autre animal contactez nous.
+				</p>
+				<br>
+				<h4>Pour un chat :</h4>
+				<p>
+				Il est possible d'avoir un chat heureux même dans un appartement, le plus important c'est de lui laisser un espace suffisant et de lui fournir un "territoire". Les chat sont des animaux très territoriaux et donc lui fournir un arbre a chat est très recommendé. Il est également très important de lui fournir des jouet, il faut penser à lui donner de quoi se dépenser et de quoi être stimulé.
+				</p>
+				<p>Un autre point très important c'est de lui fournir de la nourriture de bonne qualités et qui rempli tout ces besoins nutritionnels quotidiens. Un caht en bonne santé est un chat heureux.
+				</p>
+				<br>
+				<h4>Pour un chien</h4>
+				<p>
+				Tout comme un chat, une nutrition complète est très importante.
+				</p>
+				<p>
+				Les chien sont très sociaux et ils adorent jouer. Il est très important de les sortir 2 fois par jour pour leurs besoins mais aussi pour qu'ils dépensent leur énergie et qu'ils fassent du sport.
+				</p>
+				<br>
+				<h4> Formalités d'adoption :</h4>
+				<ul>
+					<li>Une pièce d'identité</li>
+					<li>Un justificatif de domicile</li>
+					<li>Prévoir une caisse de transport pour un char et un collier et une laisse pour un chien</li>
+				</ul>
+				<br>
+				<h4>Une participation financière sera demandée :</h4>
+				<ul>
+					<li>Différente selon le type et l'âge de l'animal, entre 60 et 500€</li>
+				</ul>
+        </section>
         
         <footer>
             <p>&copy; 2018 Inside Corporation</p>
@@ -94,9 +62,5 @@
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
-			
-		<script>
-			$('#contenu').css('height', $('#contenu div:nth-child(2)').css('height'));
-		</script>
     </body>
 </html>
