--- a/chats/chattigre.htm
+++ b/chats/chattigre.htm
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
 		<!-- Validé -->
-        <title>Tigre</title>
+        <title>Chat Tigre</title>
         <meta charset="utf-8">
 		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -11,76 +11,41 @@
         <link rel="stylesheet" type="text/css" href="css/bgcolor.css"/>
     </head>
     <body>
-		<h1 id="titre">Animals</h1>
-		<nav id="menu"></nav>
-		<br>
+		<h1>Tigre</h1>
+		<nav></nav>
 		
-		<div id="contenu">
-			<!-- <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-            </div> -->
-			
-			<div>
-				<h3>Tigre</h3>
-				<table>
-					<tr>
-						<td colspan="2"><img src="img/tigre2.jpg" class="chat" alt="tigre"/></td>
-						<td>
-							<p>Tigre est un chat très sportif et adore les enfants. En plus il est très facile de jouer avec lui.</p>
-							<br>
-							<p>Tigre est le chat qui va changer votre point de vu sur les chats ^^</p>
-							<br>
-						</td>
-					</tr>
-					<tr>
-						<td class="caracteres">
-							<ul>
-								<li>Race : Chat, Maine Coon</li>
-								<li>Age: 3 ans</li>
-								<li>Sexe: Femelle</li>
-								<li>Taille: grand</li>
-							</ul>
-						</td>
-						<td colspan="2">
-							<img src="img/tigre.jpg" class="chat" alt="tigre"/>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="3">
-							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
-						</td>
-					</tr>
-				</table>
-			</div>
-			
-			<!-- <div id="actus">
-                <ul>
-                    <li>Brand new song for everybody</li>
-                    <li>Cheese for every one ?!</li>
-                    <li>Les jeux tuent plus que le cancer du poumon</li>
-                    <li>ioqjoiqjiojqoijoiqj qdvfdsvfs</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>cracracra dojksofjvfovbjz fiejv o</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                </ul>
-            </div> -->
-		</div>
+		<section class="main">
+			<h3>Tigre</h3>
+			<table>
+				<tr>
+					<td colspan="2"><img src="img/tigre2.jpg" class="chat" alt="tigre"/></td>
+					<td>
+						<p>Tigre est un chat très sportif et adore les enfants. En plus il est très facile de jouer avec lui.</p>
+						<br>
+						<p>Tigre est le chat qui va changer votre point de vu sur les chats ^^</p>
+						<br>
+					</td>
+				</tr>
+				<tr>
+					<td class="caracteres">
+						<ul>
+							<li>Race : Chat, Maine Coon</li>
+							<li>Age: 3 ans</li>
+							<li>Sexe: Femelle</li>
+							<li>Taille: grand</li>
+						</ul>
+					</td>
+					<td colspan="2">
+						<img src="img/tigre.jpg" class="chat" alt="tigre"/>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3">
+						<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+					</td>
+				</tr>
+			</table>
+		</section>
 		
 		<footer>
             <p>&copy; 2018 Inside Corporation</p>
@@ -90,8 +55,5 @@
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
-		<script>
-			$('#contenu').css('height', $('#contenu div:nth-child(2)').css('height'));
-		</script>
-    </body>
+	</body>
 </html>
