--- a/chats/chatsleepy.htm
+++ b/chats/chatsleepy.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr">
     <head>
-        <title>Sleepy</title>
+        <title>Chat Sleepy</title>
         <meta charset="utf-8">
 		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -9,75 +9,40 @@
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
-		<h1 id="titre">Animals</h1>
-		<nav id="menu"></nav>
-		<br>
+		<h1>Sleepy</h1>
+		<nav></nav>
 		
-		<div id="contenu">
-			<!-- <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-            </div> -->
-			
-			<div>
-				<h3>Sleepy le chaton</h3>
-				<table id="tab1">
-					<tr>
-						<td colspan="2"><img src="img/sleepy.jpg" class="chat" alt="sleepy"/></td>
-						<td>
-							<p>Sleepy est un chaton de 3 mois. c'est une boule d'énergie mais il apprécie beaucoup ces siestes :3</p>
-							<br>
-							<p>Sleepy grandira avec votre famille, et il est très décontracté autour des autres animaux.</p>
-							<br>
-						</td>
-					</tr>
-					<tr>
-						<td class="caracteres">
-							<ul>
-								<li>Race : Chat, européen</li>
-								<li>Age: 3 mois</li>
-								<li>Sexe: Male</li>
-							</ul>
-						</td>
-						<td colspan="2">
-							<img src="img/sleepy3.jpg" class="chat" alt="sleepy2"/>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="3">
-							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
-						</td>
-					</tr>
-				</table>
-			</div>
-			
-			<!-- <div id="actus">
-                <ul>
-                    <li>Brand new song for everybody</li>
-                    <li>Cheese for every one ?!</li>
-                    <li>Les jeux tuent plus que le cancer du poumon</li>
-                    <li>ioqjoiqjiojqoijoiqj qdvfdsvfs</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>cracracra dojksofjvfovbjz fiejv o</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                </ul>
-            </div> -->
-		</div>
+		<section class="main">
+			<h3>Sleepy le chaton</h3>
+			<table id="tab1">
+				<tr>
+					<td colspan="2"><img src="img/sleepy.jpg" class="chat" alt="sleepy"/></td>
+					<td>
+						<p>Sleepy est un chaton de 3 mois. c'est une boule d'énergie mais il apprécie beaucoup ces siestes :3</p>
+						<br>
+						<p>Sleepy grandira avec votre famille, et il est très décontracté autour des autres animaux.</p>
+						<br>
+					</td>
+				</tr>
+				<tr>
+					<td class="caracteres">
+						<ul>
+							<li>Race : Chat, européen</li>
+							<li>Age: 3 mois</li>
+							<li>Sexe: Male</li>
+						</ul>
+					</td>
+					<td colspan="2">
+						<img src="img/sleepy3.jpg" class="chat" alt="sleepy2"/>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3">
+						<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+					</td>
+				</tr>
+			</table>
+		</section>
 		
 		<footer>
             <p>&copy; 2018 Inside Corporation</p>
@@ -87,8 +52,5 @@
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
-		<script>
-			$('#contenu').css('height', $('#contenu div:nth-child(2)').css('height'));
-		</script>
-    </body>
+	</body>
 </html>
