--- a/chiens/chien1.htm
+++ b/chiens/chien1.htm
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
 		<!-- Validé -->
-        <title>Belle</title>
+        <title>Chien Belle</title>
         <meta charset="utf-8">
 		<base href="../">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
@@ -10,93 +10,52 @@
         <link rel="stylesheet" type="text/css" href="css/menu.css"/>
     </head>
     <body>
-		<h1 id="titre">Animals</h1>
-		<nav id="menu"></nav>
-		<br>
+		<h1>Bell</h1>
+		<nav></nav>
 		
-		<div id="contenu">
-			<!-- <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-            </div>-->
-			
-			<div>
-				<h3>Belle</h3>
-				<table>
-					<tr>
-						<td colspan="2"><img src="img/chien1.jpg" class="chat" alt="belle"/></td>
-						<td>
-							<p>
-							Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très havitué aux gens.
-							</p>
-							<br>
-							<p>
-							Elle est pleine de vie et adore jouer. Elle est courageuse autour des autres chiens également alors si vous avez déjà un chien, vous pouvez adopter Belle quand même !
-							</p>
-							<br>
-						</td>
-					</tr>
-					<tr>
-						<td class="caracteres">
-							<ul>
-								<li>Race : Chien, Spitz-loup (ou Keeshond, Allemand)</li>
-								<li>Age: 5 semaines</li>
-								<li>Sexe: Femelle</li>
-								<li>Taille: grand</li>
-							</ul>
-						</td>
-						<td colspan="2">
-							<img src="img/belle2.jpg" class="chat" alt="belle2"/>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="3">
-							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
-						</td>
-					</tr>
-				</table>
-			</div>
-			
-			<!-- <div id="actus">
-                <ul>
-                    <li>Brand new song for everybody</li>
-                    <li>Cheese for every one ?!</li>
-                    <li>Les jeux tuent plus que le cancer du poumon</li>
-                    <li>ioqjoiqjiojqoijoiqj qdvfdsvfs</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>cracracra dojksofjvfovbjz fiejv o</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                </ul>
-            </div> -->
-		</div>
+		<section class="main">
+			<h3>Belle</h3>
+			<table>
+				<tr>
+					<td colspan="2"><img src="img/chien1.jpg" class="chat" alt="belle"/></td>
+					<td>
+						<p>
+						Belle est un petit chiot de 5 semaine, il a était trouvé tout seul sans sa mère, mais il est déjà très havitué aux gens.
+						</p>
+						<br>
+						<p>
+						Elle est pleine de vie et adore jouer. Elle est courageuse autour des autres chiens également alors si vous avez déjà un chien, vous pouvez adopter Belle quand même !
+						</p>
+						<br>
+					</td>
+				</tr>
+				<tr>
+					<td class="caracteres">
+						<ul>
+							<li>Race : Chien, Spitz-loup (ou Keeshond, Allemand)</li>
+							<li>Age: 5 semaines</li>
+							<li>Sexe: Femelle</li>
+							<li>Taille: grand</li>
+						</ul>
+					</td>
+					<td colspan="2">
+						<img src="img/belle2.jpg" class="chat" alt="belle2"/>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3">
+						<p>Pour rencontrer ou adopter Belle, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+					</td>
+				</tr>
+			</table>
+		</section>
 		
 		<footer>
             <p>&copy; 2018 Inside Corporation</p>
 			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
         </footer>
 		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
-		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/ancre.js"></script>
-		<script>
-			$('#contenu').css('height', $('#contenu div:nth-child(2)').css('height'));
-		</script>
-    </body>
 </html>
