--- a/chiens/chien3.htm
+++ b/chiens/chien3.htm
@@ -14,83 +14,47 @@
 		<nav id="menu"></nav>
 		<br>
 		
-		<div id="contenu">
-			<!-- <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-            </div> -->
-			
-			<div>
-				<h3>Suki</h3>
-				<table>
-					<tr>
-						<td colspan="2"><img src="img/chien3.jpg" class="chat" alt="suki"/></td>
-						<td>
-							<p>
-							Suki est un chien avec beaucoup de personnalité, il va vous surprendre tout les jours :)
-							</p>
-							<br>
-							<p>
-							Suki est un chien très sportif, qui adore courir et jouer, C'est le chien parfait pour les athlètes et les personnes sportifs.
-							</p>
-							<br>
-						</td>
-					</tr>
-					<tr>
-						<td class="caracteres">
-							<ul>
-								<li>Race : Chien, Berger Australien</li>
-								<li>Age: 1 ans</li>
-								<li>Sexe: Femelle</li>
-								<li>Taille: grand</li>
-							</ul>
-						</td>
-						<td colspan="2">
-							<img src="chiens/suki2.jpg" class="chat" alt="suki2"/>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="3">
-							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
-						</td>
-					</tr>
-				</table>
-			</div>
-			
-			<!-- <div id="actus">
-                <ul>
-                    <li>Brand new song for everybody</li>
-                    <li>Cheese for every one ?!</li>
-                    <li>Les jeux tuent plus que le cancer du poumon</li>
-                    <li>ioqjoiqjiojqoijoiqj qdvfdsvfs</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>cracracra dojksofjvfovbjz fiejv o</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                </ul>
-            </div> -->
-		</div>
+		<section class="main">
+			<h3>Suki</h3>
+			<table>
+				<tr>
+					<td colspan="2"><img src="img/chien3.jpg" class="chat" alt="suki"/></td>
+					<td>
+						<p>
+						Suki est un chien avec beaucoup de personnalité, il va vous surprendre tout les jours :)
+						</p>
+						<br>
+						<p>
+						Suki est un chien très sportif, qui adore courir et jouer, C'est le chien parfait pour les athlètes et les personnes sportifs.
+						</p>
+						<br>
+					</td>
+				</tr>
+				<tr>
+					<td class="caracteres">
+						<ul>
+							<li>Race : Chien, Berger Australien</li>
+							<li>Age: 1 ans</li>
+							<li>Sexe: Femelle</li>
+							<li>Taille: grand</li>
+						</ul>
+					</td>
+					<td colspan="2">
+						<img src="chiens/suki2.jpg" class="chat" alt="suki2"/>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3">
+						<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+					</td>
+				</tr>
+			</table>
+		</section>
 		
 		<footer>
             <p>&copy; 2018 Inside Corporation</p>
 			<a class='ancre_menu' href='#'><img src="ancre.png" alt="ancre" /></a>
         </footer>
-		
-		<p><a class="ancre_menu" href="#titre"><img id="ancre" src="ancre.png" alt="ancre"/></a></p>
 		
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/menu.js"></script>
