--- a/exotiques/cheval.htm
+++ b/exotiques/cheval.htm
@@ -14,76 +14,42 @@
 		<nav id="menu"></nav>
 		<br>
 		
-		<div id="contenu">
-			<!-- <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et convallis felis. Duis interdum turpis non risus rutrum dignissim. Integer venenatis lorem id dui dapibus, vitae finibus nibh condimentum. Morbi at ante egestas, vehicula neque sed, suscipit turpis. Cras dapibus tempus rutrum. Etiam scelerisque vulputate sem sit amet fringilla. Fusce tristique ultrices mauris, et consectetur leo vulputate vitae. Morbi eget ante fermentum, tincidunt augue vitae, mattis erat. Aliquam sit amet quam vel tortor sollicitudin tempus. Suspendisse pharetra mattis odio, non sagittis eros rutrum eget. Fusce neque ex, dapibus at leo et, volutpat malesuada quam. Integer quis cursus purus. Integer purus leo, dictum nec neque quis, rutrum pellentesque urna. Sed porttitor odio nec vulputate porttitor. Quisque in orci sed sapien porta venenatis.
-                </p>
-            </div> -->
-			
-			<div>
-				<h3>Croco</h3>
-				<table>
-					<tr>
-						<td colspan="2"><img src="img/cheval.jpg" class="chat" alt="cheval"/></td>
-						<td>
-							<p>
-							On a sauvé Zozor d'un cirque où il a était mal traité mais aujourd'hui il est très heureux et energetique !
-							</p>
-							<br>
-							<p>
-							Zozor adore tout les animaux :)
-							</p>
-							<br>
-						</td>
-					</tr>
-					<tr>
-						<td class="caracteres">
-							<ul>
-								<li>Race : Cheval, Barbe</li>
-								<li>Age: 5 ans</li>
-								<li>Sexe: Femelle</li>
-								<li>Taille: Moyenne</li>
-							</ul>
-						</td>
-						<td colspan="2">
-							<img src="img/cheval2.jpg" class="chat" alt="cheval2"/>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="3">
-							<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
-						</td>
-					</tr>
-				</table>
-			</div>
-			
-			<!-- <div id="actus">
-                <ul>
-                    <li>Brand new song for everybody</li>
-                    <li>Cheese for every one ?!</li>
-                    <li>Les jeux tuent plus que le cancer du poumon</li>
-                    <li>ioqjoiqjiojqoijoiqj qdvfdsvfs</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>cracracra dojksofjvfovbjz fiejv o</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                    <li>Loremp loremp loremp loremp loremp</li>
-                </ul>
-            </div> -->
-		</div>
+		<section class="main">
+			<h3>Croco</h3>
+			<table>
+				<tr>
+					<td colspan="2"><img src="img/cheval.jpg" class="chat" alt="cheval"/></td>
+					<td>
+						<p>
+						On a sauvé Zozor d'un cirque où il a était mal traité mais aujourd'hui il est très heureux et energetique !
+						</p>
+						<br>
+						<p>
+						Zozor adore tout les animaux :)
+						</p>
+						<br>
+					</td>
+				</tr>
+				<tr>
+					<td class="caracteres">
+						<ul>
+							<li>Race : Cheval, Barbe</li>
+							<li>Age: 5 ans</li>
+							<li>Sexe: Femelle</li>
+							<li>Taille: Moyenne</li>
+						</ul>
+					</td>
+					<td colspan="2">
+						<img src="img/cheval2.jpg" class="chat" alt="cheval2"/>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3">
+						<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+					</td>
+				</tr>
+			</table>
+		</section>
 		
 		<footer>
             <p>&copy; 2018 Inside Corporation</p>
