J'ai validé tout les fichiers, j'ai du rajouter des <hx> poour des sections

--- a/questionnaire.htm
+++ b/questionnaire.htm
@@ -4,7 +4,7 @@
     <head>
 		<!-- Validé, MAIS une seule erreur qui est un bug de html5 on peut pas corriger -->
 		<!-- L'erreure non corrigé est l.38 -->
-		<!-- aussi je border marche pas l.35-->
+		<!-- aussi je border marche pas l.35, avec css ça marche pas-->
         <title>Questionnaire</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/animaux.css"/>
