--- a/faq.htm
+++ b/faq.htm
@@ -13,6 +13,7 @@
 		</header>
 		
 		<section id="actus">
+				<h2> foire aux questions :</h2>
 				<article>
 					<h2> Qui sommes nous ?</h2>
 					<p>
@@ -39,7 +40,7 @@
 					<p>
 					Notre adresse mail :
 					</p>
-					<p><address>urcanimal@gmail.com</address></p>
+					<address>urcanimal@gmail.com</address>
 				</article>
 				
 				<article>
@@ -50,7 +51,7 @@
 					<p>
 					Notre adresse mail :
 					</p>
-					<p><address>urcanimal@gmail.com</address></p>
+					<address>urcanimal@gmail.com</address>
 				</article>
 				
 				<article>
