--- a/index.htm
+++ b/index.htm
@@ -13,11 +13,12 @@
 		</header>
 		
 		<section id="actus">
+				<h2>File d'actualités :</h2>
 				<article>
 					<h2>Vous voulez adopter un animal de compagnie?</h2>
 					<p>
 						Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions auxquelles vous devez adhérer pour pouvoir le faire...
-					</	p>
+					</p>
 					<p class="bouton"><a href="adopter.htm">Continuer</a></p>
 				</article>
 				
