J'ai validé tout les fichiers, j'ai du rajouter des <hx> poour des sections

--- a/exotiques/cheval.htm
+++ b/exotiques/cheval.htm
@@ -45,7 +45,7 @@
 				</tr>
 				<tr>
 					<td colspan="3">
-						<p>Pour rencontrer ou adopter Sleepy, contactez nous grâce à nos résaux sociaux ou par mail.</p>
+						<p>Pour rencontrer ou adopter Zozor, contactez nous grâce à nos résaux sociaux ou par mail.</p>
 					</td>
 				</tr>
 			</table>
