--- a/faq.htm
+++ b/faq.htm
@@ -13,7 +13,7 @@
 		</header>
 		
 		<section id="actus">
-				<h2> foire aux questions :</h2>
+				<h2> Foire aux questions :</h2>
 				<article>
 					<h2> Qui sommes nous ?</h2>
 					<p>
