--- a/exotiques/cheval.htm
+++ b/exotiques/cheval.htm
@@ -15,7 +15,7 @@
 		<br>
 		
 		<section class="main">
-			<h3>Croco</h3>
+			<h3>Zozor</h3>
 			<table>
 				<tr>
 					<td colspan="2"><img src="img/cheval.jpg" class="chat" alt="cheval"/></td>
