erreur nom (croco)

--- a/exotique.htm
+++ b/exotique.htm
@@ -26,7 +26,7 @@
 			<a href="exotiques/herisson.htm"><img src="img/herisson.jpg" class="animal" alt="herisson"/></a>
 			<br>
 			
-			<h3>Coco</h3>
+			<h3>Croco</h3>
 			<a href="exotiques/croco.htm"><img src="img/croco.jpg" class="animal" alt="croco"/></a>
 			<br>
 			
