style actu, style background animaux

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 				<article>
 					<h2>Vous voulez adopter un animal de compagnie?</h2>
 					<p>
-						Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines conditions auxquelles vous devez adhérer pour pouvoir le faire...
+						Notre association vous permet d'adopter l'animal de vos rêves très facilement et rapidement. Mais il y a toujours certaines <em>conditions</em> auxquelles vous devez adhérer pour pouvoir le faire...
 					</p>
 					<p class="bouton"><a href="adopter.htm">Continuer</a></p>
 				</article>
